<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
>



    <item
            app:showAsAction="ifRoom"
            android:id="@+id/destination_board"
            android:icon="@drawable/home_line"
            android:title="@string/board"
            />

    <item
            app:showAsAction="ifRoom"
            android:id="@+id/destination_shouts"
            android:icon="@drawable/shout_line"
            android:title="@string/shouts"
    />

    <item
            app:showAsAction="ifRoom"
            android:id="@+id/destination_notifications"
            android:icon="@drawable/notification_bell"
            android:title="@string/notifications"
    />


    <item
            app:showAsAction="ifRoom"
            android:id="@+id/destination_profile_logged_in_user"
            android:icon="@drawable/profile_line"
            android:title="@string/profile"
            />

</menu>