<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.RegisterFragment"
        android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:background="#80FFFFFF"
            android:id="@+id/register_fragment_spinner"
            android:visibility="gone">

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/register_fragment_first_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:background="@drawable/form_field"
            android:padding="16dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/first_name"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="15sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/register_fragment_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:background="@drawable/form_field"
            android:padding="16dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/last_name"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="24dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_first_name"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/register_fragment_email"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:background="@drawable/form_field"
            android:padding="16dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/email"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_last_name"
            android:textSize="15sp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_fragment_password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:background="@drawable/form_field"
            android:padding="16dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/password"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_email"
            android:textSize="15sp"/>

    <TextView
            android:text="@string/or_connect_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_fragment_other_options"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/gray500"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_forgot_password"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons_shape"
            android:id="@+id/register_fragment_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textColor="@color/gray500"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_password"/>
    <ImageView
            android:src="@drawable/google_plus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/register_fragment_google_login"
            android:background="@drawable/buttons_shape"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_other_options"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/google_login_button"/>

    <TextView
            android:text="@string/forgot_your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_fragment_forgot_password"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/green600"
            android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>