<?xml version="1.0" encoding="utf-8"?>


<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.NewQuestionFragment"
        android:background="@color/white">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <TextView
                    tools:text="Startups and Business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_question_community_name"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/gray500"/>
            <TextView
                    android:text="@string/question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_question_static_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray900"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/roboto_bold"
                    app:layout_constraintTop_toBottomOf="@+id/new_question_community_name"
                    android:layout_marginTop="32dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="150"
                    android:id="@+id/new_question_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/start_with_quot_how_quot_quot_what_quot_quot_where_quot_or_quot_when_quot"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/new_question_static_title"
                    android:inputType="textMultiLine|textCapSentences"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="15sp"/>


            <TextView
                    android:text="@string/details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_question_static_details"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray900"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/new_question_title"
                    android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:fontFamily="@font/roboto_bold"/>


            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:ems="10"
                    android:id="@+id/new_question_details"
                    app:layout_constraintTop_toBottomOf="@+id/new_question_static_details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:hint="@string/can_you_add_information_that_would_help_others_answer_your_question"
                    android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:textSize="15sp"
                    android:fontFamily="@font/roboto_medium"/>


            <TextView
                    android:text="@string/tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_question_static_tags"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray900"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/new_question_details"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/roboto_bold"/>


            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/new_question_chip_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/new_question_static_tags"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:chipSpacingVertical="10dp"/>


            <EditText android:layout_width="0dp"
                      android:layout_height="23dp"
                      android:hint="@string/enter_tags"
                      android:id="@+id/new_question_tag_input"
                      app:layout_constraintTop_toBottomOf="@+id/new_question_chip_group"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="32dp"
                      android:background="@android:color/transparent"
                      android:layout_marginTop="8dp"
                      android:inputType="textEmailAddress"
                      android:layout_marginEnd="24dp"
                      app:layout_constraintEnd_toStartOf="@+id/new_question_add_tag_button"
                      app:layout_constraintHorizontal_bias="0.0"
                      android:textSize="15sp"
                      android:fontFamily="@font/roboto_medium"/>


            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/new_question_tag_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:id="@+id/new_question_tag_recycler"
                    android:scrollbars="vertical"
                    android:background="@drawable/tag_suggestions_recycler"
                    android:visibility="gone"/>


            <TextView
                    android:text="@string/maximum_5_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_question_tag_instructions"
                    android:textColor="@color/gray500"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/new_question_tag_recycler"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="12sp"/>


            <TextView
                    android:text="@string/post_question"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_curve_32_gray_stroke"
                    android:id="@+id/new_question_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="120dp"
                    app:layout_constraintTop_toBottomOf="@+id/new_question_tag_instructions"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:textColor="@color/gray500"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="15sp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="32dp"
                    android:gravity="center"/>
            <TextView
                    tools:text="English"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/gray500"
                    app:layout_constraintTop_toBottomOf="@+id/new_question_static_language"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginTop="8dp"
                    android:id="@+id/new_question_language_input"/>
            <TextView
                    android:text="@string/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_question_static_language"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray900"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@id/new_question_tag_instructions"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/roboto_bold"/>
            <ImageButton
                    android:src="@drawable/plus"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/button_curve_32_gray_stroke"
                    android:id="@+id/new_question_add_tag_button"
                    app:layout_constraintTop_toTopOf="@+id/new_question_tag_input"
                    app:layout_constraintBottom_toBottomOf="@+id/new_question_tag_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    android:scaleType="fitCenter"
                    android:padding="10dp"
                    android:contentDescription="@string/add_tag"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>